--- a/asn6/index.html
+++ b/asn6/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Assignment 6: HTML Form</h1>
 
-  <form>
+  <form id="myForm">
     <fieldset>
       <legend>User Information</legend>
 
@@ -51,7 +51,36 @@
 
       <input type="submit" value="Submit">
       <input type="reset" value="Reset">
+
+      <h2>My First JavaScript</h2>
+      <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">
+        Click me to display Date and Time.
+      </button>
+
+      <p id="demo"></p>
+
     </fieldset>
   </form>
+
+  <button id="tryItButton">Try it</button>
+
+  <div id="formDataDisplay"></div>
+
+  <script>
+    const form = document.getElementById('myForm');
+    const tryItButton = document.getElementById('tryItButton');
+    const formDataDisplay = document.getElementById('formDataDisplay');
+
+    tryItButton.addEventListener('click', () => {
+      const formData = new FormData(form);
+      let displayData = '';
+
+      for (const [key, value] of formData.entries()) {
+        displayData += `<p>${key}: ${value}</p>`;
+      }
+
+      formDataDisplay.innerHTML = displayData;
+    });
+  </script>
 </body>
 </html>
